# single_motor_gripper

./: CMakeLists.txt  README.md  package.xml
config/: standard.yaml
launch/: gripper.launch
src/: gripper_control.cpp
