<?xml version="1.0"?>
<package format="2">
  <name>single_motor_gripper</name>
  <version>0.0.0</version>
  <description>The single_motor_gripper package</description>

  <maintainer email="lvov.g@northeastern.edu">Gary Lvov</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>dynamixel_workbench_controllers</build_depend>
  <build_depend>dynamixel_workbench_toolbox</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>dynamixel_workbench_controllers</build_export_depend>
  <build_export_depend>dynamixel_workbench_toolbox</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamixel_workbench_controllers</exec_depend>
  <exec_depend>dynamixel_workbench_toolbox</exec_depend>

  <export>

  </export>
</package>
